# nSim

./: .gitignore  .gitmodules  LICENSE  README.md
code/: CMakeLists.txt  build-unix.sh  build-windows.bat
code/Abgabe_Astronomie_28891/: imgui.ini
code/assets/: satelites_data.csv  satellites_orbit.csv
code/src/: Body.h  Camera.h  Consts.h  Cursor.h  Loader.h  SciVec3.h  main.cpp
paper/: main.typ  refs.bib  sources.yml  template.typ
